tests/fixtures/invalid/str_lshift_int.py
# Cannot left shift Str and Int
x: str = "hello" << 1
